Fixed alignment

--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -303,6 +303,7 @@ Full-Width Styles
 
 #main_content {
   padding-top: 40px;
+  text-align: justify
 }
 
 #footer_wrap {
